package juanavila.mastermind.controllers;

public interface AcceptorController {
    void accept(ControllerVisitor controllerVisitor);
}
