package juanavila.mastermind.controllers;

import juanavila.mastermind.models.Mastermind;
import juanavila.mastermind.models.State;
import juanavila.mastermind.views.ResumeView;

public class ResumeController extends Controller {

    public ResumeController(Mastermind game, State state) {
        super(game, state);
    }

    @Override
    public void control() {
        boolean newGame = new ResumeView().read();
        if (newGame) {
            this.game.clear();
            reset();
        } else {
            next();
        }
    }

}
